Email Spam Classifier Created using Colab

--- a/Email_Spam_Classifier.ipynb
+++ b/Email_Spam_Classifier.ipynb
@@ -27,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "gn1PiWNobUDI"
       },
@@ -49,7 +49,7 @@
       "metadata": {
         "id": "wsApSwb_bKp-"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -62,9 +62,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TJtz1G3wbg3X",
-        "outputId": "ccf29d9f-188e-49b2-8c95-42a893c15500"
+        "outputId": "3c066f8f-af48-42bf-cf85-22c069113ff5"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -96,7 +96,7 @@
       "metadata": {
         "id": "3drIGZ6Pb4eP"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -109,9 +109,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jhL69edacKLb",
-        "outputId": "a6bd596e-acf9-4319-c8bf-f97f47370a50"
+        "outputId": "8d85b7ca-d862-48fe-c1f8-0e4311f52024"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -140,9 +140,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TQ0FfJiWcTO8",
-        "outputId": "6f043841-682c-4241-a45e-976c8bd97d6c"
+        "outputId": "76727a59-2414-4e67-8124-739456b9372f"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -152,7 +152,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 6
         }
       ]
     },
@@ -208,9 +208,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f0c2f67a-5e7e-427a-9593-05efa429eccc"
+        "outputId": "e41df7b9-31a9-4d33-c723-5e4fb628a17b"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -233,7 +233,7 @@
       "metadata": {
         "id": "2ZXv_vF8cgBd"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -245,7 +245,7 @@
       "metadata": {
         "id": "owuI38y1dAkJ"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -258,9 +258,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ox1IM3CxdMbW",
-        "outputId": "10996794-0dec-4741-cde1-e720a262944d"
+        "outputId": "977458e0-e0c6-47b4-9864-8bb092719c1d"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -292,9 +292,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "496072f5-c3dc-40ff-f8a5-057db270a6ce"
+        "outputId": "fed35fd6-1200-499f-bdd4-15825f83ad1d"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -324,7 +324,7 @@
       "metadata": {
         "id": "sAryWYHEdUlk"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -339,9 +339,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "825ca4a3-4b56-48e8-a110-16fe6bbbb35b"
+        "outputId": "5800a8d0-d29a-4ae3-cce7-3aa0fc5c4491"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -366,9 +366,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EVInYd_OegQN",
-        "outputId": "7bdd719d-d752-4f30-ce65-9c52d29b0492"
+        "outputId": "ad12787c-8069-4f20-e0f5-2935cddb14fb"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -395,7 +395,7 @@
       "metadata": {
         "id": "dOPYtrRwepWr"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -408,9 +408,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nXoQ5pkzkGjX",
-        "outputId": "be804a2c-3488-4e72-e635-715f85e9231e"
+        "outputId": "1b47e30a-cf15-4cb5-edbc-459f47be2ba5"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -440,7 +440,7 @@
       "metadata": {
         "id": "tL-iol5gkQD2"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -454,9 +454,9 @@
           "height": 74
         },
         "id": "9Vvv8sJ6krit",
-        "outputId": "dcc75152-2fb0-4cf9-ae35-203bd38665fe"
+        "outputId": "0269acde-c51f-4a51-e907-84b30bfbd0b5"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -469,7 +469,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 18
         }
       ]
     },
@@ -482,7 +482,7 @@
       "metadata": {
         "id": "wjnXBnuCk4X-"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -495,9 +495,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4f090fe6-9fa7-46c9-cc1c-6f394d657f49"
+        "outputId": "8a467652-6386-4aa6-cbeb-1c8781325b16"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -517,7 +517,7 @@
       "metadata": {
         "id": "CETPYfUAlzoA"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -530,9 +530,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3rpecsbWmR9y",
-        "outputId": "a8d97970-1b92-4c30-bceb-c2c43e099c95"
+        "outputId": "e4940b88-b100-489b-b445-0668e2a39ad1"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -566,16 +566,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4psZYsICmeP4",
-        "outputId": "1eea0f69-f008-46af-a381-bc46f4b6091f"
+        "outputId": "0f680fb2-fdb4-49f8-dcd3-34268bd6a2dd",
+        "collapsed": true
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter your email: Hye Yuvika Singh, I am sure my love finds you  Data sheet of email spam vale ki as you requested  Your request is fulfilled by your LOVE :)  Lots of love and Regards, Aryan Singh\n",
-            "Hye Yuvika Singh, I am sure my love finds you  Data sheet of email spam vale ki as you requested  Your request is fulfilled by your LOVE :)  Lots of love and Regards, Aryan Singh\n",
+            "Enter your email: Hi Aryan,  We're excited to introduce our brand-new product that’s designed to make your life easier, more enjoyable, and more productive!  For a limited time only, we’re offering you an exclusive 50% discount on your first purchase. Don’t miss out on this incredible deal!  Why You’ll Love It: Feature 1: [Brief description of a key feature and its benefit] Feature 2: [Another feature that adds value] Feature 3: [Highlight what makes this product unique] How to Claim Your Discount: Visit our website: YourCompany.com Choose your product and add it to your cart. Use promo code NEW50 at checkout. Hurry, this offer expires in just 48 hours! Be among the first to experience the difference.  If you have any questions, our customer service team is here to help. Just reply to this email or call us at [Customer Service Number].  Thank you for being a valued customer. We look forward to serving you!\n",
+            "Hi Aryan,  We're excited to introduce our brand-new product that’s designed to make your life easier, more enjoyable, and more productive!  For a limited time only, we’re offering you an exclusive 50% discount on your first purchase. Don’t miss out on this incredible deal!  Why You’ll Love It: Feature 1: [Brief description of a key feature and its benefit] Feature 2: [Another feature that adds value] Feature 3: [Highlight what makes this product unique] How to Claim Your Discount: Visit our website: YourCompany.com Choose your product and add it to your cart. Use promo code NEW50 at checkout. Hurry, this offer expires in just 48 hours! Be among the first to experience the difference.  If you have any questions, our customer service team is here to help. Just reply to this email or call us at [Customer Service Number].  Thank you for being a valued customer. We look forward to serving you!\n",
             "[1]\n",
             "Ham mail\n"
           ]
@@ -588,7 +589,7 @@
       "metadata": {
         "id": "JZd0KL8qmq3r"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": []
     }
   ]
